Use text display entities for holograms if available